--- a/src/less/base/_variables.less
+++ b/src/less/base/_variables.less
@@ -1,24 +1,42 @@
-@register-comment-bg: #f6f7f8;
-@bg-color-checkbox: #1e6791;
-@form-border-radius: 4px;
-@white:#fff; 
-@form-box-shadow: 0 0 0 4px rgba(226, 233, 240, 0.8);
-@form-border-radius: 4px;
-@border-color: #B1BFC7;
-@border-color-active: #999999;
-@transition-form: border 0.40s ease-in-out, box-shadow 0.40s ease-in-out;
-@title: #222222;
-@text: #383737;;
-@textarea-comment-add: #dde8ee; 
-@active: #037ec6; 
+@color-1:  #019795;
+@color-2: #86A138;
+@color-3: #D5D53F;
+@color-4: #EAC133;
+@color-5: #EC9C45;
+@red: #DC1019;
+@color-7: #E483AC;
+@color-8: #A44B8D;
+@color-9: #C9C9E3;
+@color-10: #0073B2;
+@color-11:#A6C9E7;
 
-@upload-button: #8e9ba2;
-@background-color: rgba(238, 240, 242, 0.5);
+//buttom background
+
+@btn-cart: #ED7A00;
+@btn-red: #D65B8E;
+@btn-blue: #0073AF;
+
+//цвета для текста
+@text:#333333;
+@text-green: #60B6A8;
+@text-red: #DF2439;
+@text-grey-dark: #4E4E4E;  // текст для "Войти", "Зарегистрироватья", и цена товаров в корзине
 
 
-@white:#fff;
+  //фоны для страницы и карточек
 
-@upload-button: #8e9ba2;
-@background-color: rgba(238, 240, 242, 0.5);
+@body-bg:#DBDBDB;
+@white: #fff;
+@blue: #004AAA;
+@redlight: #F4344F;
+@fongreen: #61B39B;
+@red: #DC1019;
 
 
+//color for goods
+@coral:  #FF7979;
+@seagreen:#6BAC89;
+@violet: #C3499E;
+@gold:   #FFB047;
+@darkblue: #002D76;
+@brown:  #AF674F;
