--- a/src/less/main.less
+++ b/src/less/main.less
@@ -11,6 +11,7 @@
 @import "blocks/_buttons";
 @import "blocks/_card";
 @import "blocks/_titles";
+@import "blocks/_colors";
 
 // Sections
 @import "sections/_ui-nav-panel"; // Left panel in documentation
