--- a/src/pug/layouts/_mixins-links.pug
+++ b/src/pug/layouts/_mixins-links.pug
@@ -2,4 +2,5 @@ include ../mixins/_buttons.pug
 include ../mixins/_cards.pug
 include ../mixins/_links.pug
 include ../mixins/_mixins.pug
+include ../mixins/_colors.pug
 
