--- a/src/less/base/_variables.less
+++ b/src/less/base/_variables.less
@@ -1,3 +1,4 @@
+//color for line-gradient
 @color-1:  #019795;
 @color-2: #86A138;
 @color-3: #D5D53F;
@@ -10,21 +11,19 @@
 @color-10: #0073B2;
 @color-11:#A6C9E7;
 
-//buttom background
-
+//color for buttom background
 @btn-cart: #ED7A00;
 @btn-red: #D65B8E;
 @btn-blue: #0073AF;
 
-//цвета для текста
+//-color for text
 @text:#333333;
 @text-green: #60B6A8;
 @text-red: #DF2439;
-@text-grey-dark: #4E4E4E;  // текст для "Войти", "Зарегистрироватья", и цена товаров в корзине
+@text-grey: #4E4E4E;  // текст для "Войти", "Зарегистрироватья", и цена товаров в корзине
 
 
-  //фоны для страницы и карточек
-
+  //-color for background
 @body-bg:#DBDBDB;
 @white: #fff;
 @blue: #004AAA;
