--- a/src/pug/pages/ui/colors.pug
+++ b/src/pug/pages/ui/colors.pug
@@ -8,17 +8,20 @@ block content
 	.container.text-center
 		h3 Цветовая схема для кнопок
 		.basic-block
-			+basic-block-item('btn-cart','@btn-cart' )
+			+basic-block-item('btn-cart','@btn-cart')
 			+basic-block-item('btn-red','@btn-red' )
 			+basic-block-item('btn-blue','@btn-blue' )
+		pre.
+			background-color: @btn-cart
 
 		h3 Цветовая схема для текста
 		.basic-block
 			+basic-block-item('color-text','@text' )
-			+basic-block-item('color-text-green','@color-text-green' )
-			+basic-block-item('color-text-red','@color-text-red' )
-			+basic-block-item('color-text','@text' )
-			+basic-block-item('color-text-grey-dark','@color-text-grey-dark' )
+			+basic-block-item('color-text-green','@text-green' )
+			+basic-block-item('color-text-red','@text-red' )
+			+basic-block-item('color-text-grey','@text-grey' )
+		pre.
+			color: @text-red
 
 		h3 Цветовая схема ассортимента для карточки товара
 		.basic-block
@@ -28,6 +31,8 @@ block content
 			+basic-block-item('color-gold','@gold' )
 			+basic-block-item('color-darkblue','@darkblue' )
 			+basic-block-item('color-brown','@brown' )
+		pre.
+			background-color: @coral
 
 		h3 Цветовая схема фонов
 		.basic-block
@@ -36,6 +41,9 @@ block content
 			+basic-block-item('color-redlight','@redlight' )
 			+basic-block-item('color-fongreen','@fongreen' )
 			+basic-block-item('color-6','@red(лейбл скидка)' )
+			+basic-block-item('color-brown','@brown' )
+		pre.
+			background-color: @redlight
 
 		h3 Цветовая схема для градиентной линии
 		.basic-block
@@ -50,3 +58,7 @@ block content
 			+basic-block-item('color-9','@color-9' )
 			+basic-block-item('color-10','@color-10' )
 			+basic-block-item('color-11','@color-11' )
+
+		.line-gradient
+		pre.
+			background:linear-gradient(to right, @color-1 20%, @color-2 20%, @color-2 40%,@color-3, @color-3 color-4 60%, @color-4 80%,	@color-5 80%, @color-5 100%);
