custom-grid added

--- a/src/pug/sections/ui-navigation.pug
+++ b/src/pug/sections/ui-navigation.pug
@@ -16,7 +16,7 @@
 			+linkLeftPanel("Цвета", "")
 			+linkLeftPanel("Заголовки", "")
 			+linkLeftPanel("Типографика", "typhography.html")
-			+linkLeftPanel("Сетка", "#")
+			+linkLeftPanel("Сетка", "grid.html")
 
 	.left-panel__section
 		p.strong Блоки
