--- a/src/less/base/_variables.less
+++ b/src/less/base/_variables.less
@@ -21,4 +21,9 @@
 @upload-button: #8e9ba2;
 @background-color: rgba(238, 240, 242, 0.5);
 
+@mobile: ~"(min-width: 360px)";
+@tablet: ~"(min-width: 784px)";
+@desktop: ~"(min-width: 1152px)";
+@desktopXL: ~"(min-width: 1440px)";
+
 
