mixin with vertical margins added

--- a/src/pug/sections/ui-navigation.pug
+++ b/src/pug/sections/ui-navigation.pug
@@ -17,6 +17,7 @@
 			+linkLeftPanel("Заголовки", "")
 			+linkLeftPanel("Типографика", "typhography.html")
 			+linkLeftPanel("Сетка", "grid.html")
+			+linkLeftPanel("Вертикальный ритм", "vertical-grid.html")
 
 	.left-panel__section
 		p.strong Блоки
