--- a/src/less/base/_variables.less
+++ b/src/less/base/_variables.less
@@ -21,6 +21,14 @@
 @upload-button: #8e9ba2;
 @background-color: rgba(238, 240, 242, 0.5);
 
+// Вертикальный шаг
+@l1:8px;
+@l2:@l1*2;
+@l3:@l1*4;
+@l4:@l1*7;
+@l5:@l1*10;
+
+// Точки перелома
 @mobile: ~"(min-width: 360px)";
 @tablet: ~"(min-width: 784px)";
 @desktop: ~"(min-width: 1152px)";
