Revert "Vertical margins"

--- a/src/pug/sections/ui-navigation.pug
+++ b/src/pug/sections/ui-navigation.pug
@@ -16,8 +16,7 @@
 			+linkLeftPanel("Цвета", "")
 			+linkLeftPanel("Заголовки", "")
 			+linkLeftPanel("Типографика", "typhography.html")
-			+linkLeftPanel("Сетка", "grid.html")
-			+linkLeftPanel("Вертикальный ритм", "vertical-grid.html")
+			+linkLeftPanel("Сетка", "#")
 
 	.left-panel__section
 		p.strong Блоки
