fix after error revert

--- a/src/pug/pages/ui/grid.pug
+++ b/src/pug/pages/ui/grid.pug
@@ -31,7 +31,7 @@ block content
 			@desktop: ~"(min-width: 1152px)";
 			@desktopXL: ~"(min-width: 1440px)";
 
-		p Для написания:
+		p Для написания медиа запроса:
 		pre.
 			@media @tablet {
 			...	
