--- a/src/pug/sections/ui-navigation.pug
+++ b/src/pug/sections/ui-navigation.pug
@@ -16,7 +16,7 @@
 			+linkLeftPanel("Цвета", "colors.html")
 			+linkLeftPanel("Заголовки", "")
 			+linkLeftPanel("Типографика", "typhography.html")
-			+linkLeftPanel("Сетка", "#")
+			+linkLeftPanel("Сетка", "grid.html")
 
 	.left-panel__section
 		p.strong Блоки
@@ -24,7 +24,6 @@
 
 			+linkLeftPanel("Баннер красный", "#")
 			+linkLeftPanel("Баннер с картинкой", "#")
-
 			+linkLeftPanel("Кнопки", "buttons.html")
 			+linkLeftPanel("Карточки товара", "cards.html")
 			+linkLeftPanel("Карточка раздела", "#")
