--- a/src/pug/layouts/ui-layout/_head.pug
+++ b/src/pug/layouts/ui-layout/_head.pug
@@ -11,6 +11,7 @@ meta(name="description" content="")
 
 link(rel="stylesheet", href="../libs/jquery-custom-scrollbar/jquery.custom-scrollbar.css")
 link(rel="stylesheet", href="../css/main.css")
+link(rel="stylesheet", href="../libs/bootstrap4-grid-customized/custom-grid.css")
 link(href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&amp;subset=cyrillic-ext" rel="stylesheet")
 
 <!--[if lt IE 9]>
