both grids added

--- a/src/less/base/_base.less
+++ b/src/less/base/_base.less
@@ -164,3 +164,20 @@ blockquote p {
 .content {
 	flex: 1;
 }
+
+
+//Тестовые классы
+.block{
+	background-color: @body-bg;
+	display: inline-block;
+}
+[class^="block-"] {
+	width: 150px;
+	padding:10px;
+	background-color: @blue;
+	color:#fff;
+	text-align: center;
+	text-transform: uppercase;
+	.mixin-margin(bottom,@l3);
+}
+
