--- a/src/less/blocks/_colors.less
+++ b/src/less/blocks/_colors.less
@@ -73,7 +73,7 @@
 		@color-4 60%,@color-4 80%,
 		@color-5 80%,@color-5 100%);
 	
-	@media (min-width: 768px) {
+	@media @tablet {
 		background:linear-gradient(to right, 
 			@color-1 10%, 
 			@color-2 10%,@color-2 20%,
@@ -87,7 +87,7 @@
 			@color-10 90%,@color-10 100%);
 	}
 
-	@media (min-width: 992px) {
+	@media @desktop {
 		background:linear-gradient(to right, 
 			@color-1 9.09%, 
 			@color-2 9.09%,@color-2 18.18%,
