--- a/src/less/base/_variables.less
+++ b/src/less/base/_variables.less
@@ -39,3 +39,16 @@
 @gold:   #FFB047;
 @darkblue: #002D76;
 @brown:  #AF674F;
+
+// Вертикальный шаг
+@l1:8px;
+@l2:@l1*2;
+@l3:@l1*4;
+@l4:@l1*7;
+@l5:@l1*10;
+
+// Точки перелома
+@mobile: ~"(min-width: 360px)";
+@tablet: ~"(min-width: 784px)";
+@desktop: ~"(min-width: 1152px)";
+@desktopXL: ~"(min-width: 1440px)";
