--- a/src/pug/sections/ui-navigation.pug
+++ b/src/pug/sections/ui-navigation.pug
@@ -16,6 +16,7 @@
 			+linkLeftPanel("Цвета", "colors.html")
 			+linkLeftPanel("Заголовки", "")
 			+linkLeftPanel("Типографика", "typhography.html")
+			+linkLeftPanel("Карточки", "cards.html")
 			+linkLeftPanel("Сетка", "grid.html")
 
 	.left-panel__section
