--- a/src/less/base/_variables.less
+++ b/src/less/base/_variables.less
@@ -30,6 +30,7 @@
 @redlight: #F4344F;
 @fongreen: #61B39B;
 @red: #DC1019;
+@lightgrey: #E1E1E1;
 
 @mobile: ~"(min-width: 360px)";
 @tablet: ~"(min-width: 784px)";
