--- a/src/less/blocks/_card.less
+++ b/src/less/blocks/_card.less
@@ -1,52 +1,115 @@
-@radius: 6px;
-@shadow: 0px 10px 40px 0px rgba(99, 117, 138, 0.3);
-@background: #fff;
 
-.card {
-	border: none;
-	border-radius: @radius;
-	background-color: @background;
-	box-shadow: @shadow;
-	padding: 20px;
+.card {	
+	position: relative;
+	width: 100%;
 	display: flex;
 	flex-direction: column;
+	align-items: center;
+	height: 345px;	
+	padding-top: 30px;	
+	text-align: center;
+	margin-bottom: 24px;
+	@media @mobile {
+		padding: 24px 8px;
+		height: 376px;	}
+	
+	@media @desktop {
+		padding: 24px 16px;
+		height: 400px;
+	}
 }
+.card-heart-icon{
+	display: block;
+	width: 16px;
+	height: 16px;	
+	position: absolute;
+	top: 10px;
+	right: 10px;
+	color: @lightgrey;
+	transition: color 1s;
+	@media @tablet {right: 0px; top:-5px;}
+}
+.card-heart-icon:hover {color: @red;}
 
-.card > .title-1, .card > .title-2, .card > .title-3, .card > .title-4, .card > .title-5, .card > .title-6 {
-	margin-top: 0;
-}
 .card__img {
-	width: 100%;
-	margin-bottom: 15px;
+	height: 125px;	
 	overflow:hidden;
-}
-
-.card__title {
-	font-size: 22px;
-	line-height: 28px;
-	font-weight: 600;
-	// overflow:hidden;
-	// text-overflow:ellipsis;
-}
-.card--post {
-	width: 100%;
-	height: 308px;	
-}
-.card--portfolio {
-	padding: 0;
-	padding-bottom: 20px;
-	width: 100%;
-	height: 315px;
-}
-
-.card__desc {
+	margin-bottom: 8px;	
 	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-	align-items: flex-start;
-	flex:1;
+	justify-content: center;
+	align-items: flex-end;
+	@media @mobile {height: 176px;}	
+	@media @desktop {height: 196px;}
 }
-
-.card-wrapper-fixed-size {
-	width: 360px;
+.card__text {
+	font-size: 11px;
+	line-height: 12px;	
+	height: 64px;
+	@media @mobile {
+		font-size: 14px;
+		line-height: 16px;
+		margin-bottom: 16px;
+	}
+	@media @desktop {
+		font-size: 16px;
+		line-height: 18px;
+		margin-bottom: 24px;
+	}
+}
+.card__price{
+	font-size: 16px;
+	font-weight: 600;
+	margin-bottom: 8px;
+	@media (min-width: 992px){
+		font-size: 18px;
+		
+	}
+}
+.card-label-sale{
+	position: absolute;
+	top: 10px;
+	left: 10px;
+	width: 50px;
+	height: 30px;
+	border-top-right-radius: 15px;
+	border-bottom-right-radius: 15px;
+	background-color: @red;
+	text-align: center;
+	font-size: 14px;
+	color: @white;
+	line-height: 16px;
+	padding-top: 8px;
+	@media @tablet {left: 0px; top:0;}
+}
+.card__price--sale{
+	width: 140px;	
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	@media (min-width: 992px){
+		width: 160px;
+	}
+}
+.price-new {
+	color: @text-red;
+	
+}
+.price-old{
+	display: inline-block;
+	position: relative;
+}
+.price-old:after{
+	content:"";
+	width: 115%;
+	height: 1px;
+	background-color: #000;
+	position: absolute;
+	top: 49%;
+	left: -9%;
+}
+button {
+	width: 140px;
+	@media (min-width: 992px){
+		width: 160px;
+	}
 }
