--- a/src/less/base/_variables.less
+++ b/src/less/base/_variables.less
@@ -1,3 +1,6 @@
+/* base color */
+@black: #000;
+
 //color for line-gradient
 @color-1:  #019795;
 @color-2: #86A138;
@@ -11,10 +14,19 @@
 @color-10: #0073B2;
 @color-11:#A6C9E7;
 
+/* color for button text */
+@btn-text-buy-click: #58595B;
+
 //color for buttom background
 @btn-cart: #ED7A00;
 @btn-red: #D65B8E;
 @btn-blue: #0073AF;
+@btn-store: #B5B5CC;
+@btn-green:#60B6A8;
+
+//color for button background hover, focus, active
+@btn-cart-hover: #EF8C22;
+@btn-store-hover: #C9C9E3;
 
 //-color for text
 @text:#333333;
@@ -22,15 +34,13 @@
 @text-red: #DF2439;
 @text-grey: #4E4E4E;  // текст для "Войти", "Зарегистрироватья", и цена товаров в корзине
 
-
-  //-color for background
+ //-color for background
 @body-bg:#DBDBDB;
 @white: #fff;
 @blue: #004AAA;
 @redlight: #F4344F;
 @fongreen: #61B39B;
 @red: #DC1019;
-
 
 //color for goods
 @coral:  #FF7979;
