--- a/src/less/blocks/_card.less
+++ b/src/less/blocks/_card.less
@@ -47,13 +47,13 @@
 	height: 64px;
 	@media @mobile {
 		font-size: 14px;
-		line-height: 16px;
-		margin-bottom: 16px;
+		line-height: 16px;		
 	}
+	@media (min-width: 768px) {height: 75px;}
 	@media @desktop {
 		font-size: 16px;
 		line-height: 18px;
-		margin-bottom: 24px;
+		
 	}
 }
 .card__price{
