--- a/src/less/blocks/_card.less
+++ b/src/less/blocks/_card.less
@@ -45,11 +45,15 @@
 	font-size: 11px;
 	line-height: 12px;	
 	height: 64px;
+	margin-bottom: 8px;
 	@media @mobile {
 		font-size: 14px;
-		line-height: 16px;		
+		line-height: 16px;
+
 	}
-	@media (min-width: 768px) {height: 75px;}
+	@media (min-width: 768px) {
+		margin-bottom: 16px;
+		height: 75px;}
 	@media @desktop {
 		font-size: 16px;
 		line-height: 18px;
