--- a/src/pug/sections/ui-navigation.pug
+++ b/src/pug/sections/ui-navigation.pug
@@ -33,7 +33,7 @@
 		p.strong Секции
 		.left-panel-nav
 
-			+linkLeftPanel("Хиты продаж", "#")
+			+linkLeftPanel("Хиты продаж", "sales_hits.html")
 			+linkLeftPanel("Разделы каталога", "#")
 
 			+linkLeftPanel("Шапка - Выпадающее меню", "#")
