--- a/src/pug/pages/ui/cards.pug
+++ b/src/pug/pages/ui/cards.pug
@@ -22,7 +22,8 @@ block content
 					+card(  'goods/purse_green.png', 'purse green', 'Кошелек для монет N/S|Морской пейзаж', '4 863 р')
 
 		pre.
-			+card( 'goods/purse_yellow.png', 'purse yellow', 'Сумка большая, коллекция "Рига"', '4 863 р')
+			.col-6.col-md-3
+				+card( 'goods/purse_yellow.png', 'purse yellow', 'Сумка большая, коллекция "Рига"', '4 863 р')
 
 		.title-2 Карточка со скидкой
 		
@@ -37,4 +38,5 @@ block content
 				.col-6.col-md-3
 					+card--sale( '- 40%', 'goods/purse-brown-hover.png', 'purse green', 'Портмоне тройного сложения с внешним карманом для монет на молнии, с ручкой', '4 863 р', '4 863 р' )
 		pre.
-			+card--sale( '- 40%', 'goods/purse_yellow.png', 'purse yellow', 'Сумка большая, коллекция "Рига"', '4 863 р', '4 863 р' )
+			.col-6.col-md-3
+				+card--sale( '- 40%', 'goods/purse_yellow.png', 'purse yellow', 'Сумка большая, коллекция "Рига"', '4 863 р', '4 863 р' )
