typography is done

--- a/src/less/base/_variables.less
+++ b/src/less/base/_variables.less
@@ -17,10 +17,12 @@
 @btn-blue: #0073AF;
 
 //-color for text
+@title: #60B6A8;
 @text:#333333;
 @text-green: #60B6A8;
 @text-red: #DF2439;
 @text-grey: #4E4E4E;  // текст для "Войти", "Зарегистрироватья", и цена товаров в корзине
+@text-card: #58595B;
 
 
   //-color for background
