--- a/src/pug/sections/ui-navigation.pug
+++ b/src/pug/sections/ui-navigation.pug
@@ -28,6 +28,7 @@
 			+linkLeftPanel("Кнопки", "buttons.html")
 			+linkLeftPanel("Карточки товара", "cards.html")
 			+linkLeftPanel("Карточка раздела", "#")
+			+linkLeftPanel("Социальные сети", "ui-social.html")
 
 	.left-panel__section
 		p.strong Секции
