--- a/src/pug/pages/ui/ui-social.pug
+++ b/src/pug/pages/ui/ui-social.pug
@@ -15,9 +15,20 @@ block content
 						+social-icon('#', 'instagram.svg','instagram')
 						+social-icon('#', 'vk.svg','vk')
 						+social-icon('#', 'fb.svg','fb')
-						//- .social-block__item
-						//- 	img(src="../img/social/instagram.svg", alt="instagram")
-						//- .social-block__item
-						//- 	img(src="../img/social/vk.svg", alt="instagram")
-						//- .social-block__item
-						//- 	img(src="../img/social/fb.svg", alt="instagram")
+
+		.title-4 как вставить в проект				
+		pre.
+			.col-10.offset-1.col-md-6.offset-md-3.col-lg-3
+				.social.text-center
+					.title-4.social-block__title Мы в социальных сетях
+					.social-block
+						+social-icon('#', 'instagram.svg','instagram')
+						+social-icon('#', 'vk.svg','vk')
+						+social-icon('#', 'fb.svg','fb')
+		.title-4 используемый миксин
+		pre.
+			mixin social-icon(href, imgSrc, imgAlt)
+				.social-block__item
+					a(href= href)
+						img(src="../img/social/"+ imgSrc, alt=""+ imgAlt)
+
