--- a/src/less/main.less
+++ b/src/less/main.less
@@ -12,6 +12,7 @@
 @import "blocks/_card";
 @import "blocks/_titles";
 @import "blocks/_colors";
+@import "blocks/_section-card.less";
 
 // Sections
 @import "sections/_ui-nav-panel"; // Left panel in documentation
