--- a/src/pug/sections/ui-navigation.pug
+++ b/src/pug/sections/ui-navigation.pug
@@ -27,7 +27,7 @@
 			+linkLeftPanel("Баннер с картинкой", "#")
 			+linkLeftPanel("Кнопки", "buttons.html")
 			+linkLeftPanel("Карточки товара", "cards.html")
-			+linkLeftPanel("Карточка раздела", "#")
+			+linkLeftPanel("Карточка раздела", "section-card.html")
 
 	.left-panel__section
 		p.strong Секции
