--- a/src/less/blocks/_card.less
+++ b/src/less/blocks/_card.less
@@ -1,5 +1,5 @@
 
-.card {	
+.card-product {	
 	position: relative;
 	width: 100%;
 	display: flex;
@@ -31,7 +31,7 @@
 }
 .card-heart-icon:hover {color: @red;}
 
-.card__img {
+.card-product__img {
 	height: 125px;	
 	overflow:hidden;
 	margin-bottom: 8px;	
@@ -41,7 +41,7 @@
 	@media @mobile {height: 176px;}	
 	@media @desktop {height: 196px;}
 }
-.card__text {
+.card-product__text {
 	font-size: 11px;
 	line-height: 12px;	
 	height: 64px;
@@ -60,7 +60,7 @@
 		
 	}
 }
-.card__price{
+.card-product__price{
 	font-size: 16px;
 	font-weight: 600;
 	margin-bottom: 8px;
