mobile and tablet header-search

--- a/src/pug/sections/ui-navigation.pug
+++ b/src/pug/sections/ui-navigation.pug
@@ -37,7 +37,7 @@
 			+linkLeftPanel("Разделы каталога", "#")
 
 			+linkLeftPanel("Шапка - Выпадающее меню", "#")
-			+linkLeftPanel("Шапка - Поиск", "#")
+			+linkLeftPanel("Шапка - Поиск", "header-search.html")
 			+linkLeftPanel("Шапка - Все вместе", "#")
 
 			+linkLeftPanel("Подвал - Навигация", "#")
