--- a/src/less/base/_variables.less
+++ b/src/less/base/_variables.less
@@ -21,6 +21,7 @@
 @text-green: #60B6A8;
 @text-red: #DF2439;
 @text-grey: #4E4E4E;  // текст для "Войти", "Зарегистрироватья", и цена товаров в корзине
+@text-light-grey: #58595B;
 
 
   //-color for background
