--- a/src/less/main.less
+++ b/src/less/main.less
@@ -17,6 +17,8 @@
 @import "sections/_ui-nav-panel"; // Left panel in documentation
 @import "sections/_footer";
 @import "sections/_header";
+@import "sections/_header-search";
+
 
 // Pages
 // Utils - Always Last - !IMPORTANT
