--- a/src/pug/mixins/_mixins.pug
+++ b/src/pug/mixins/_mixins.pug
@@ -1,1 +1,7 @@
 // Разные миксины по одному, которые понадобятся. Для логотипа, бейджа, и т.д.
+//- Mixn for search result
+mixin searchResult (img, text)
+	.header-search__result
+		.header-search__result-img
+			img(src="../img/good_thumbnail/" + img , alt=img)
+		.header-search__result-description !{text}
