--- a/src/less/blocks/_colors.less
+++ b/src/less/blocks/_colors.less
@@ -65,7 +65,7 @@
 
 //line-gradient
 .line-gradient {
-	height: 3px;
+	height: 4px;
 	background:linear-gradient(to right, 
 		@color-1 20%, 
 		@color-2 20%,@color-2 40%,
@@ -103,3 +103,18 @@
 	}
 }
 
+.line-gradient--menu {
+	height: 2px;
+	background:linear-gradient(to right, 
+		@color-1 9.09%, 
+		@color-2 9.09%,@color-2 18.18%,
+		@color-3 18.18%,@color-3 27.27%,
+		@color-4 27.27%,@color-4 36.36%,
+		@color-5 36.36%,@color-5 45.45%,
+		@red 45.45%,@red 54.54%,
+		@color-7 54.54%,@color-7 63.63%,
+		@color-8 63.63%,@color-8 72.72%,
+		@color-9 72.72%,@color-9 81.81%,
+		@color-10 81.81%,@color-10 90.90%,
+		@color-11 90.90%,@color-11 99.99%);
+}
