--- a/src/less/base/_variables.less
+++ b/src/less/base/_variables.less
@@ -21,6 +21,10 @@
 @text-green: #60B6A8;
 @text-red: #DF2439;
 @text-grey: #4E4E4E;  // текст для "Войти", "Зарегистрироватья", и цена товаров в корзине
+@text-salad:#019795;
+
+@textMenu: #58595B;
+@borderMenu: #C4C4C4;;
 
 
   //-color for background
