added heading 1lvl

--- a/src/pug/pages/ui/typhography.pug
+++ b/src/pug/pages/ui/typhography.pug
@@ -22,9 +22,9 @@ block content
 				br
 				p Заголовки
 				.section-ui
-					.title-1 Заголовок 1
-					.title-2 Заголовок 2
-					.title-3 Заголовок 3
+					.title-1 Каталог товаров
+					.title-2 Хиты продаж
+					.title-3 Посмотреть все аксессуары
 					.title-4 Заголовок 4
 					.title-5 Заголовок 5
 					.title-6 Заголовок 6
