--- a/src/less/blocks/_titles.less
+++ b/src/less/blocks/_titles.less
@@ -1,27 +1,39 @@
 .title-1, .title-2, .title-3, .title-4, .title-5, .title-6, .title {
-	line-height: 1.3;
+	line-height: 1;
 	margin: 1.0em 0 1.0em;
 }
 
-.title-1 { font-size: 28px; font-weight: 900; }
+.title-1 { 
+	font-size: 24px; 
+	font-weight: 500;
+	.mixin-margin(bottom,@l2);
+	.mixin-margin(top,@l2);
+	color: @title;
+	text-transform: uppercase;
+}
+@media @desktop {
+	.title-1 {
+		font-size: 28px;
+	}
+}
+@media @desktopXL {
+	.title-1 {
+		font-size: 32px;
+	}
+}
 
 .title-2 { 
 	font-size: 24px; 
-	font-weight: 500; 
+	font-weight: 300; 
 	.mixin-margin(bottom,@l2);
 	.mixin-margin(top,@l3);
 	color: @title;
 }
 @media @desktop {
 	.title-2 {
-		font-size: 28px;
+		font-size: 24px;
 	}
-}
-@media @desktopXL {
-	.title-2 {
-		font-size: 32px;
-	}
-}
+} 
 
 .title-3 { 
 	font-size: 18px; 
@@ -40,11 +52,7 @@
 	}
 }
 
-.title-4 { 
-	font-size: 20px; 
-	font-weight: 900;
-	color: @text-card;
-}
+.title-4 { font-size: 20px; font-weight: 900; }
 
 .title-5 { font-size: 18px; font-weight: 900; }
 
