--- a/src/pug/sections/ui-navigation.pug
+++ b/src/pug/sections/ui-navigation.pug
@@ -27,7 +27,8 @@
 			+linkLeftPanel("Баннер с картинкой", "#")
 			+linkLeftPanel("Кнопки", "buttons.html")
 			+linkLeftPanel("Карточки товара", "cards.html")
-			+linkLeftPanel("Карточка раздела", "section-card.html")
+			+linkLeftPanel("Карточка раздела(описание) ", "section-card.html")
+			+linkLeftPanel("Карточка раздела(изображение)", "section-card-img.html")
 
 	.left-panel__section
 		p.strong Секции
