--- a/src/pug/layouts/_mixins-links.pug
+++ b/src/pug/layouts/_mixins-links.pug
@@ -3,4 +3,5 @@ include ../mixins/_cards.pug
 include ../mixins/_links.pug
 include ../mixins/_mixins.pug
 include ../mixins/_colors.pug
+include ../mixins/_section-card.pug
 
