card and cards with color

--- a/src/less/base/_variables.less
+++ b/src/less/base/_variables.less
@@ -18,6 +18,7 @@
 
 //-color for text
 @text:#333333;
+@darkgrey: #58595B;
 @text-green: #60B6A8;
 @text-red: #DF2439;
 @text-grey: #4E4E4E;  // текст для "Войти", "Зарегистрироватья", и цена товаров в корзине
