--- a/src/pug/mixins/_mixins.pug
+++ b/src/pug/mixins/_mixins.pug
@@ -1,1 +1,9 @@
 // Разные миксины по одному, которые понадобятся. Для логотипа, бейджа, и т.д.
+mixin colors-product(color1, color2, color3, color4, color5, color6)
+	.colors-product
+		.colors-product__circle(style="background-color: "+ color1)
+		.colors-product__circle(style="background-color: "+ color2)
+		.colors-product__circle(style="background-color: "+ color3)
+		.colors-product__circle(style="background-color: "+ color4)
+		.colors-product__circle(style="background-color: "+ color5)
+		.colors-product__circle(style="background-color: "+ color6)
