--- a/src/pug/sections/ui-navigation.pug
+++ b/src/pug/sections/ui-navigation.pug
@@ -16,7 +16,8 @@
 			+linkLeftPanel("Цвета", "colors.html")
 			+linkLeftPanel("Заголовки", "")
 			+linkLeftPanel("Типографика", "typhography.html")
-			+linkLeftPanel("Карточки", "cards.html")
+			+linkLeftPanel("Карточки товара", "cards.html")
+			+linkLeftPanel("Карточки с цветовой схемой", "cards-colorscheme.html")
 			+linkLeftPanel("Сетка", "grid.html")
 
 	.left-panel__section
@@ -25,9 +26,7 @@
 
 			+linkLeftPanel("Баннер красный", "#")
 			+linkLeftPanel("Баннер с картинкой", "#")
-
 			+linkLeftPanel("Кнопки", "buttons.html")
-			+linkLeftPanel("Карточки товара", "cards.html")
 			+linkLeftPanel("Карточка раздела", "#")
 
 	.left-panel__section
