--- a/src/pug/mixins/_cards.pug
+++ b/src/pug/mixins/_cards.pug
@@ -1,3 +1,4 @@
+//-миксин для обычной карточки
 mixin card( imgHover, imgSrc, imgAlt, cardText, cardPrice)
 
 	.card-product
@@ -7,9 +8,10 @@ mixin card( imgHover, imgSrc, imgAlt, cardText, cardPrice)
 			img(src="../img/"+ imgSrc alt =''+ imgAlt)
 		.card-product__text.
 			#{cardText}
-		.card-product__price #{cardPrice}
+		.card-product__price #{cardPrice}		
 		button(type="submit" class="btn") Купить
 
+//-миксин для карточки со скидкой
 mixin card--sale(prosent,imgHover, imgSrc, imgAlt, cardText, priceOld, priceNew)
 	.card-product 
 		.card-label-sale #{prosent}
@@ -23,3 +25,33 @@ mixin card--sale(prosent,imgHover, imgSrc, imgAlt, cardText, priceOld, priceNew)
 			span.price-new #{priceOld}
 			span.price-old #{priceNew}
 		button(type="submit" class="btn") Купить
+
+//-миксин для обычной карточки с цветовой схемой товаров
+mixin card-with-colors( imgHover, imgSrc, imgAlt, cardText, cardPrice)
+
+	.card-product.card-product--colorscheme
+		a.card-heart-icon(href="#")
+			i.fas.fa-heart
+		.card-product__img(style="background: url('../img/"+imgHover+"') bottom no-repeat; background-size: contain;")
+			img(src="../img/"+ imgSrc alt =''+ imgAlt)
+		.card-product__text.
+			#{cardText}
+		.card-product__price #{cardPrice}		
+		button(type="submit" class="btn") Купить
+		+colors-product('#FF7979', '#6BAC89', '#C3499E', '#FFB047', '#002D76', '#AF674F')
+
+//-миксин для карточки со скидкой и цветовой схемой
+mixin card-sale-with-colors(prosent,imgHover, imgSrc, imgAlt, cardText, priceOld, priceNew)
+	.card-product.card-product--colorscheme 
+		.card-label-sale #{prosent}
+		a.card-heart-icon(href="#")
+			i.fas.fa-heart
+		.card-product__img(style="background: url('../img/"+imgHover+"') bottom no-repeat; background-size: contain;")
+			img(src="../img/"+ imgSrc alt =''+ imgAlt)
+		.card-product__text.
+			#{cardText}
+		.card-product__price.card__price--sale
+			span.price-new #{priceOld}
+			span.price-old #{priceNew}
+		button(type="submit" class="btn") Купить
+		+colors-product('#FF7979', '#6BAC89', '#C3499E', '#FFB047', '#002D76', '#AF674F')
